Fix nav color and column spacing

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 
 #sidenav {
-  background-color: rgb(0, 109, 192);
+  background-color: rgb(16, 151, 255);
   grid-row: 1 / 3;
   padding: 0.75rem;
   display: grid;
@@ -35,14 +35,11 @@
   align-content: flex-start;
 }
 
+.sidenav-item,
 .sidenav-head {
   display: grid;
   grid-template-columns: 1fr 4fr;
-}
-
-.sidenav-item {
-  display: grid;
-  grid-template-columns: 1fr 4fr;
+  gap: 0.8rem;
 }
 
 .sidenav-text,
